# imfit

./: .gitignore  DESolver.cpp  DESolver.h  Makefile.am  README.txt  SConstruct  add_functions.cpp  add_functions.h  autogen.sh  bootstrap_errors.cpp  bootstrap_errors.h  commandline_parser.cpp  commandline_parser.h  compare_fits_files.py  config_file_parser.cpp  config_file_parser.h  configure.ac  convolver.cpp  convolver.h  diff_evoln_fit.cpp  diff_evoln_fit.h  do_imfit_tests  do_makeimage_tests  image_io.cpp  image_io.h  imfit.pc.in  imfit_main.cpp  levmar_fit.cpp  levmar_fit.h  makeimage_main.cpp  mersenne_twister.c  mersenne_twister.h  model_object.cpp  model_object.h  mp_enorm.c  mp_enorm.h  mpfit.cpp  mpfit_cpp.h  nmsimplex_fit.cpp  nmsimplex_fit.h  (+8 more)
docs/: imfit_howto.tex
examples/: README_examples.txt
function_objects/: definitions.h  func_broken-exp.cpp  func_broken-exp.h  func_broken-exp2d.cpp  func_broken-exp2d.h  func_brokenexpdisk3d.cpp  func_brokenexpdisk3d.h  func_core-sersic.cpp  func_core-sersic.h  func_edge-on-disk.cpp  func_edge-on-disk.h  func_edge-on-disk_n4762.cpp  func_edge-on-disk_n4762v2.cpp  func_edge-on-ring.cpp  func_edge-on-ring.h  func_edge-on-ring2side.cpp  func_edge-on-ring2side.h  func_exp.cpp  func_exp.h  func_expdisk3d.cpp  func_expdisk3d.h  func_flatsky.cpp  func_flatsky.h  func_gaussian-ring.cpp  func_gaussian-ring.h  func_gaussian-ring2side.cpp  func_gaussian-ring2side.h  func_gaussian.cpp  func_gaussian.h  func_gaussianring3d.cpp  func_gaussianring3d.h  func_gen-exp.cpp  func_gen-exp.h  func_gen-sersic.cpp  func_gen-sersic.h  func_kolmogorov.cpp  func_kolmogorov.h  func_moffat.cpp  func_moffat.h  func_sersic.cpp  (+5 more)
tests/: biggertest_orig.fits  gensersictest_orig.fits  imfit_textout1  imfit_textout2  imfit_textout3  imfit_textout3b  imfit_textout3c_tail  imfit_textout3d  imfit_textout3d2  imfit_textout4  imfit_textout4b  imfit_textout4c  imfit_textout4d  imfit_textout5_tail  imfit_textout6  imfit_textout7a  imfit_textout7b  imfit_textout7c  imfit_textout_bad1  imfit_textout_bad2  imfit_textout_bad3  imfit_textout_bad4  imfit_textout_bad5  imfit_textout_bad6  imfit_textout_bad7  makeimage_textout1  makeimage_textout10  makeimage_textout11  makeimage_textout12  makeimage_textout13  makeimage_textout14  makeimage_textout2  makeimage_textout3  makeimage_textout4  makeimage_textout5  makeimage_textout6  makeimage_textout7  makeimage_textout8  makeimage_textout9  sersic+exp_orig.fits
